--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -11,10 +11,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-
+<div class="container">
+    <div th:replace="~{navigation}"></div>
+</div>
 </head>
 <body>
-<h1>Details</h1>
-<span th:text="${selectedPerson.id+' ' +selectedPerson.name}"></span>
+<div class="container">
+<span th:text="${selectedPerson.name + ' ' + selectedPerson.surname}"></span>
+</div>
 </body>
 </html>
