--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -12,18 +12,23 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
+<div th:replace="~{navigation :: navigation(new)}"></div>
 <form th:method="POST" th:action="@{/new}" th:object="${person}">
     <div class="form-group col-md-3">
-        <label for="formGroupExampleInput">Name</label>
-        <input type="text" th:field="*{name}" class="form-control" id="formGroupExampleInput" placeholder="Enter your name">
+        <label for="nameInput">Name</label>
+        <input type="text" th:field="*{name}" class="form-control" id="nameInput" placeholder="Enter your name">
+        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</div>
     </div>
     <div class="form-group col-md-3">
-        <label for="formGroupExampleInput2">Surname</label>
-        <input type="text" th:field="*{surname}" class="form-control" id="formGroupExampleInput2" placeholder="Enter your surname">
+        <label for="surnameInput">Surname</label>
+        <input type="text" th:field="*{surname}" class="form-control" id="surnameInput" placeholder="Enter your surname">
+        <div style="color:red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Error</div>
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>
+</div>
 
 </body>
 </html>
